Send request for offer and placeholder handler for the form

--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,12 @@
 </head>
 <body>
   <h1>PHPMailer Example</h1>
+  <form method="post" action="send-request-for-offer.php">
+    <label for="email">Send request for offer</label>
+    <input type="email" name="email" placeholder="john@doe.com">
+    <button type="submit">
+      Send
+    </button>
+  </form>
 </body>
 </html>
