Addded simple function for loading project configuration

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>PHPMailer Example</h1>
-  <form method="post" action="send-request-for-offer.php">
+  <form method="post" action="send_request_for_offer.php">
     <label for="email">Send request for offer</label>
     <input type="email" name="email" placeholder="john@doe.com">
     <button type="submit">
